--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,47 @@
 
-.card {
-    height: 200px;
-    width: 20%;
-    border-radius: 10px;
-    background-color: hsl(215, 32%, 27%);
+  .card {
+    width: 190px;
+    height: 254px;
+    background: #07182E;
+    position: relative;
+    display: flex;
+    place-content: center;
+    place-items: center;
+    overflow: hidden;
+    border-radius: 20px;
   }
-
-  img {
-    border-radius: 5px 5px 0 0;
+  
+  .card h2 {
+    z-index: 1;
+    color: white;
+    font-size: 2em;
   }
-
-  p{
-    font-size:18px
+  
+  .card::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    background-image: linear-gradient(180deg, rgb(0, 183, 255), rgb(255, 48, 255));
+    height: 130%;
+    animation: rotBGimg 3s linear infinite;
+    transition: all 0.2s linear;
   }
+  
+  @keyframes rotBGimg {
+    from {
+      transform: rotate(0deg);
+    }
+  
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
+  .card::after {
+    content: '';
+    position: absolute;
+    background: #07182E;
+    ;
+    inset: 5px;
+    border-radius: 15px;
+  }  
