--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,13 @@
 .card {
-    height: 200px;
-    width: 15%;
+    height: 300px;
+    width: 25%;
     border-radius: 10px;
     background-color: #1f1f39;
-    margin
+    margin-left: 38% ;
 
 }
 .card1 {
-    height: 600px;
+    height: 800px;
     width: 25%;
     border-radius: 10px;
     background-color: #1f1f39;
