--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,3 @@
-.card {
-    height: 300px;
-    width: 25%;
-    border-radius: 10px;
-    background-color: #1f1f39;
-    margin-left: 38% ;
-
-}
-.card1 {
-    height: 800px;
-    width: 25%;
-    border-radius: 10px;
-    background-color: #1f1f39;
-    margin-left: 38% ;
-
-}
 
 img {
     border-radius: 5px 5px 5px 5px;
@@ -21,4 +5,91 @@ img {
 
 p{
     font-size:18px
+  }
+  .imaginaria{
+    margin-bottom:60%;
+    
+  }
+
+  a {text-decoration: none;}
+
+.container {
+  width: 100%;
+}
+
+ul {
+  padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  list-style: none;
+}
+
+nav {
+  background: #ffffff;
+  font-size: 0;
+  position: relative;
+
+    
+}
+
+nav > ul > li {
+  display: inline-block;
+    font-size: 14px;
+    padding: 0 15px;
+    position: relative;
+}
+nav > ul > li > a {
+  color: #000000;
+    display: block;
+    padding: 9%;
+    border-bottom: 3px solid transparent;
+    transition: all .3s ease;
+}
+nav > ul > li:hover > a {
+  color: #ffffff; 
+    border-bottom: 3px solid #6d6969;
+}
+
+
+.dropdown {position: static;}
+
+
+
+.principal1{
+  margin-top: 5%;
+  margin-bottom: 25%;
+  width: 100%;
+}
+  .principal1:hover .flipper{
+    text-align: center;
+    transform: rotateY(180deg);
+ 
+  }
+
+  .flipper{
+    width: 100%;
+    height: 100%;
+    transition: transform 1.3s;
+    transform-style: preserve-3d;
+  	position: relative;
+
+  }
+
+  .card1, .back{
+    position: absolute;
+    min-height: 400px;
+    max-height: 800px;
+    min-width: 15%;
+    max-width: 25%;
+    width: 100%;
+    border-radius: 10px;
+    background-color: #1f1f39;
+    margin-left: 38% ;
+    backface-visibility: hidden;
+
+  }
+
+  .back{
+    transform: rotateY(180deg);
+    
   }
