--- a/css/index.css
+++ b/css/index.css
@@ -1,96 +1,133 @@
-
 img {
-    border-radius: 5px 5px 5px 5px;
-  }
+  border-radius: 5px;
+}
 
-p{
-    font-size:18px
-  }
-  .imaginaria{
-    margin-top: 110%;
-    
-  }
+p {
+  font-size: 18px;
+}
 
-  a {text-decoration: none;}
+a {
+  text-decoration: none;
+}
 
 .container {
   width: 100%;
+  max-width: 1200px; 
+  margin: 0 auto; 
 }
 
 ul {
   padding-left: 0;
-    margin-top: 0;
-    margin-bottom: 0;
+  margin: 0;
   list-style: none;
 }
 
 nav {
   background: #ffffff;
-  font-size: 0;
+  font-size: 16px;
   position: relative;
-
-    
 }
 
 nav > ul > li {
   display: inline-block;
-    font-size: 14px;
-    padding: 0 15px;
-    position: relative;
+  margin: 0 10px;
 }
+
 nav > ul > li > a {
   color: #000000;
-    display: block;
-    padding: 9%;
-    border-bottom: 3px solid transparent;
-    transition: all .3s ease;
+  display: block;
+  padding: 5px;
+  border-bottom: 3px solid transparent;
+  transition: all .3s ease;
 }
+
 nav > ul > li:hover > a {
-  color: #ffffff; 
-    border-bottom: 3px solid #6d6969;
+  color: #ffffff;
+  border-bottom: 3px solid #6d6969;
 }
 
-
-.dropdown {position: static;}
-
-
-
-.principal1{
+.principal1 {
   margin-top: 5%;
   width: 100%;
-  background-color: #1f1f44
+  background-color: #1f1f44;
+  text-align: center;
 }
-  .principal1:hover .flipper{
-    text-align: center;
-    transform: rotateY(180deg);
-    transition: transform 1.5s;
- 
+
+.principal1:hover .flipper {
+  transform: rotateY(180deg);
+  transition: transform 1.5s;
+}
+
+.flipper {
+  width: 100%;
+  height: 100%;
+  transition: transform 1.7s;
+  transform-style: preserve-3d;
+  position: relative;
+}
+
+.card1, .back {
+  position: absolute;
+  min-height: 100px;
+  max-height: 600px;
+  min-width: 20%; 
+  max-width: 40%; 
+  width: 100%;
+  border-radius: 10px;
+  background-color: #1f1f39;
+  margin-left: 30%;
+  backface-visibility: hidden;
+}
+
+.back {
+  transform: rotateY(180deg);
+}
+
+.imaginaria{
+  margin-top: 100%;
+}
+
+.habilidades, .projetos, .nfts, .contatos {
+  margin-top: 100%;
+  background-color: #333;
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+@media only screen and (max-device-width: 900px) {
+   
+  .imaginaria{
+    margin-top: 160%;
   }
 
-  .flipper{
-    width: 100%;
-    height: 100%;
-    transition: transform 1.7s;
-    transform-style: preserve-3d;
-  	position: relative;
-
   }
 
-  .card1, .back{
-    position: absolute;
-    min-height: 400px;
-    max-height: 800px;
-    min-width: 15%;
-    max-width: 25%;
-    width: 100%;
-    border-radius: 10px;
-    background-color: #1f1f39;
-    margin-left: 38% ;
-    backface-visibility: hidden;
+  @media only screen and (max-device-width: 700px) {
+   
+    .imaginaria{
+      margin-top: 220%;
+    }
+    .card1, .back{
+      min-height: 400px;
+      max-height:  200px;
+      min-width: 20%; 
+      max-width: 40%; 
 
-  }
 
-  .back{
-    transform: rotateY(180deg);
+    }
+
+    p {
+      font-size: 11px;
+    }
+
+  
+    }
     
-  }
+    @media (min-width: 1200px) {
+      .card1, .back{
+
+        min-height:  800px ;
+        max-height:  60%;
+      }
+    }
