--- a/css/index.css
+++ b/css/index.css
@@ -89,9 +89,10 @@ nav > ul > li:hover > a {
 
 .habilidades, .projetos, .nfts, .contatos {
   margin-top: 100%;
-  background-color: #333;
-  color: white;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
   padding: 20px;
+  margin-bottom: 20%;
   text-align: center;
 }
 
@@ -131,3 +132,48 @@ nav > ul > li:hover > a {
         max-height:  60%;
       }
     }
+
+
+    .conteiner {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 2%; 
+      justify-content: center; 
+      align-items: center; 
+      margin-left: 10%;
+    }
+
+
+    .card2 {
+      width: 190px;
+      height: 254px;
+      border-radius: 20px;
+      transition: all .3s;
+
+     }
+    
+    .card2 .img {
+      width: 70px;
+      height: 70px;
+      border-radius: 100%;
+      margin: auto;
+      margin-top: 20px;
+      margin-top: 20%;
+    }
+
+    
+.card22 {
+  width: 190px;
+  height: 254px;
+  background-color: #1a1a1a;
+  border-radius: 0;
+  transition: all .2s;
+ }
+ 
+ .card22:hover {
+  transform: scale(0.98);
+  border-radius: 20px;
+ }
+ 
+
+
