--- a/css/index.css
+++ b/css/index.css
@@ -87,7 +87,7 @@ nav > ul > li:hover > a {
   margin-top: 100%;
 }
 
-.habilidades, .projetos, .nfts, .contatos {
+.habilidades, .nfts, .contatos {
   margin-top: 100%;
   background-color: #ffffff;
   color: rgb(0, 0, 0);
@@ -176,4 +176,48 @@ nav > ul > li:hover > a {
  }
  
 
+ 
+
+ .card-container {
+     width: 100%;
+     max-width: 400px;
+     margin: 2em auto;
+     background-color:  hsl(216, 50%, 16%);
+     border-radius: 15px;
+     margin-bottom: 1%;
+     padding: 4%;
+ }
+ 
+ .corpo {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+ }
+ 
+.moeda, .data, .rodape {
+     display: flex;
+     align-items: center;
+ }
+ 
+
+ .ether {
+     width: 15%;
+     margin-right: 10%;
+     padding-right: 1%;
+     border-radius: 60px;
+ }
+
+ .relogio{
+  width: 10%;
+  margin-right: 10%;
+  padding-left: 45%;
+  border-radius: 60px;
+ }
+ 
+ .creator {
+     width: 10%;
+     border-radius: 200px;
+     outline: 2px solid white;
+     margin-right: 2%;
+ }
 
